Replace existing code with updated version

--- a/recordings/pixel/axisdiscretemeasureelement.json
+++ b/recordings/pixel/axisdiscretemeasureelement.json
@@ -1,37 +1,37 @@
 [
     {
-        "dx": 47,
-        "dy": 16,
+        "dx": 45,
+        "dy": 13,
         "index": 1
     },
     {
-        "dx": 49,
-        "dy": 49,
+        "dx": 47,
+        "dy": 50,
         "index": 2
     },
     {
-        "dx": 50,
-        "dy": 73,
+        "dx": 49,
+        "dy": 66,
         "index": 3
     },
     {
-        "dx": 50,
-        "dy": 94,
+        "dx": 49,
+        "dy": 97,
         "index": 4
     },
     {
-        "dx": 50,
-        "dy": 128,
+        "dx": 51,
+        "dy": 130,
         "index": 5
     },
     {
-        "dx": 49,
-        "dy": 153,
+        "dx": 51,
+        "dy": 155,
         "index": 6
     },
     {
         "dx": 50,
-        "dy": 177,
+        "dy": 180,
         "index": 7
     },
     {
@@ -40,53 +40,58 @@
         "index": 8
     },
     {
-        "dx": 51,
-        "dy": 236,
+        "dx": 53,
+        "dy": 235,
         "index": 9
     },
     {
-        "dx": 51,
-        "dy": 261,
+        "dx": 53,
+        "dy": 256,
         "index": 10
     },
     {
-        "dx": 51,
-        "dy": 281,
+        "dx": 55,
+        "dy": 285,
         "index": 11
     },
     {
-        "dx": 52,
-        "dy": 313,
+        "dx": 55,
+        "dy": 315,
         "index": 12
     },
     {
-        "dx": 52,
-        "dy": 343,
+        "dx": 54,
+        "dy": 340,
         "index": 13
     },
     {
-        "dx": 55,
-        "dy": 370,
+        "dx": 53,
+        "dy": 371,
         "index": 14
     },
     {
-        "dx": 57,
-        "dy": 405,
+        "dx": 51,
+        "dy": 406,
         "index": 15
     },
     {
-        "dx": 57,
+        "dx": 50,
         "dy": 432,
         "index": 16
     },
     {
-        "dx": 57,
-        "dy": 450,
+        "dx": 50,
+        "dy": 457,
         "index": 17
     },
     {
-        "dx": 58,
-        "dy": 487,
+        "dx": 54,
+        "dy": 489,
         "index": 18
+    },
+    {
+        "dx": 51,
+        "dy": 516,
+        "index": 19
     }
 ]
