--- a/recordings/pixel/axismeasureelement.json
+++ b/recordings/pixel/axismeasureelement.json
@@ -1,72 +1,87 @@
 [
     {
-        "dx": 45,
+        "dx": 44,
         "dy": 14,
         "index": 1
     },
     {
-        "dx": 44,
-        "dy": 47,
+        "dx": 47,
+        "dy": 50,
         "index": 2
     },
     {
-        "dx": 45,
-        "dy": 81,
+        "dx": 47,
+        "dy": 71,
         "index": 3
     },
     {
-        "dx": 46,
-        "dy": 106,
+        "dx": 47,
+        "dy": 105,
         "index": 4
     },
     {
-        "dx": 49,
-        "dy": 127,
+        "dx": 47,
+        "dy": 130,
         "index": 5
     },
     {
-        "dx": 50,
-        "dy": 160,
+        "dx": 46,
+        "dy": 151,
         "index": 6
     },
     {
-        "dx": 48,
-        "dy": 185,
+        "dx": 46,
+        "dy": 186,
         "index": 7
     },
     {
-        "dx": 51,
-        "dy": 207,
+        "dx": 48,
+        "dy": 206,
         "index": 8
     },
     {
-        "dx": 51,
-        "dy": 242,
+        "dx": 52,
+        "dy": 233,
         "index": 9
     },
     {
-        "dx": 51,
-        "dy": 267,
+        "dx": 49,
+        "dy": 265,
         "index": 10
     },
     {
-        "dx": 49,
-        "dy": 299,
+        "dx": 48,
+        "dy": 291,
         "index": 11
     },
     {
-        "dx": 49,
-        "dy": 335,
+        "dx": 48,
+        "dy": 324,
         "index": 12
     },
     {
         "dx": 51,
-        "dy": 360,
+        "dy": 359,
         "index": 13
     },
     {
-        "dx": 54,
-        "dy": 391,
+        "dx": 51,
+        "dy": 384,
         "index": 14
+    },
+    {
+        "dx": 51,
+        "dy": 414,
+        "index": 15
+    },
+    {
+        "dx": 53,
+        "dy": 440,
+        "index": 16
+    },
+    {
+        "dx": 52,
+        "dy": 473,
+        "index": 17
     }
 ]
